# lab06

./: CMakeLists.txt  CPack.cmake  ChangeLog.md  README.md
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/src/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/src/formatter_lib_dir/: Makefile
formatter_lib/: CMakeLists.txt
formatter_lib/src/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/src/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/src/formatter_ex_lib_dir/: Makefile  cmake_install.cmake
hello_world_application/src/formatter_ex_lib_dir/formatter_lib_dir/: Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
